<resources>
    <string name="app_name">GameWFriends</string>
    <string name="title_play">Play</string>
    <string name="title_Messages">Messages</string>
    <string name="title_Notifications">Notifications</string>
    <string name="title_Account">Account</string>
    <string name="Account_Username">Username</string>
    <string name="Account_Bio">Bio</string>
    <string name="Account_Photo">Photo</string>
    <!--    <string name="title_messages">Messages</string>-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>