<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/account">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.GameWFriends.ui.Play.PlayFragment"
        android:label="@string/title_play"
        tools:layout="@layout/fragment_play" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.GameWFriends.ui.Messages.DashboardFragment"
        android:label="@string/title_Messages"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/account"
        android:name="com.GameWFriends.ui.Account.AccountFragment"
        android:label="@string/title_Account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.GameWFriends.ui.notifications.NotificationsFragment"
        android:label="@string/title_Notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>